Update build process to compile and move 'index.html' and 'main.js' to 'dist' directory for complete static website generation. Create 'index.html' in 'src' directory as main entry point with references to 'tailwind.css' and 'main.js'.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     </header>
     <main class="p-4">
         <!-- Main content will go here -->
-    </main>
+</main>
+<script src="main.js"></script>
 </body>
 </html>
 
