--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LLM Ads Demo</title>
-    <link href="tailwind.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 text-gray-900">
-    <header class="bg-blue-500 text-white p-4">
-        <h1 class="text-2xl font-bold">Welcome to the LLM Ads Demo</h1>
-        <p class="mt-2">This project demonstrates how LLM ads can be implemented and blocked.</p>
-    </header>
-    <main class="p-4">
-        <!-- Main content will go here -->
-    </main>
-</body>
-</html>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite App</title>
+  <link rel="stylesheet" href="assets/style.css" />
+</head>
+
+<body>
+  <div class="mx-auto mt-6 flex max-w-sm items-center space-x-4 rounded-xl bg-white p-6 shadow-lg">
+    <div class="shrink-0">
+      <img class="h-12 w-12" src="https://mdbootstrap.com/img/new/avatars/1.jpg" alt="ChitChat Logo" />
+    </div>
+    <div>
+      <div class="text-xl font-medium text-black">Wow, it works!</div>
+      <p class="text-slate-500">
+        This alert is build with Tailwind CSS classes
+      </p>
+    </div>
+  </div>
+  <script type="module" src="assets/main.js"></script>
+</body>
+
+</html>
