added empty demo

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         demonstrates how ad blockers can deal with it.
       </p>
       <div class="flex flex-col mb-8 lg:mb-16 space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
-        <a href="#"
+        <a href="demoads.html"
           class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
           Get started
           <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -147,7 +147,31 @@
             class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
           </div>
           <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            2021
+            1966
+          </time>
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+            ELIZA
+          </h3>
+          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+            Created by Joseph Weizenbaum at MIT, ELIZA is considered to be the
+            first chatbot ever built by humans.
+          </p>
+          <a href="https://web.njit.edu/~ronkowit/eliza.html" target="_blank"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
+            Try it
+            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+              viewBox="0 0 14 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M1 5h12m0 0L9 1m4 4L9 9" />
+            </svg>
+          </a>
+        </li>
+        <li class="mb-10 ms-4">
+          <div
+            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          </div>
+          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+            2001
           </time>
           <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
             SmarterChild: pioneering AI chatbot
@@ -179,6 +203,30 @@
             class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
           </div>
           <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+            June 2017
+          </time>
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+            The invention of Transformers Architecture
+          </h3>
+          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+            Transformers came out in 2017 with the paper “Attention is all you
+            need” from Vaswani and colleagues of a Google Team.
+          </p>
+          <a href="https://arxiv.org/abs/1706.03762" target="_blank"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
+            Read the paper
+            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+              viewBox="0 0 14 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M1 5h12m0 0L9 1m4 4L9 9" />
+            </svg>
+          </a>
+        </li>
+        <li class="mb-10 ms-4">
+          <div
+            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          </div>
+          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
             June 2018
           </time>
           <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
@@ -187,6 +235,31 @@
           <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
             OpenAI unveils GPT-1, its initial version of GPT.
           </p>
+        </li>
+        <li class="mb-10 ms-4">
+          <div
+            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          </div>
+          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+            October 2018
+          </time>
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+            Google's BERT
+          </h3>
+          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+            Pre-trained on vast amounts of text, BERT was the first proper
+            foundational language model that could be fine-tuned for specific
+            tasks, setting new performance standards across various benchmarks.
+          </p>
+          <a href="https://arxiv.org/abs/1810.04805" target="_blank"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
+            Read the paper
+            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+              viewBox="0 0 14 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M1 5h12m0 0L9 1m4 4L9 9" />
+            </svg>
+          </a>
         </li>
         <li class="mb-10 ms-4">
           <div
@@ -249,12 +322,51 @@
             of parameters compared to its initial predecessor.
           </p>
         </li>
+        <li class="mb-10 ms-4">
+          <div
+            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          </div>
+          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+            February 2023
+          </time>
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+            ChatGPT achieves unprecedented growth
+          </h3>
+          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+            It is reported that ChatGPT reached an estimated 100 million monthly
+            active users in January, just two months after its launch, making it
+            the fastest-growing consumer application in history.
+          </p>
+        </li>
+
+        <li class="mb-10 ms-4">
+          <div
+            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
+          </div>
+          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
+            TBD
+          </time>
+          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+            TBD
+          </h3>
+          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
+            TBD: Other models, using LLMs in search engines, announcing ads,
+            research papers about LLM ads.
+          </p>
+        </li>
       </ol>
 
       <p class="my-4 text-sm font-normal italic text-gray-500 dark:text-gray-400">
-        Source for timeline:
+        Sources for the timeline:
         <a class="text-blue-400" href="https://timelines.issarice.com/wiki/Timeline_of_ChatGPT">
           timelines.issarice.com
+        </a>,
+        <a class="text-blue-400"
+          href="https://medium.com/@researchgraph/brief-introduction-to-the-history-of-large-language-models-llms-3c2efa517112">
+          Research Graph
+        </a>,
+        <a class="text-blue-400" href="https://synthedia.substack.com/p/a-timeline-of-large-language-model">
+          synthedia.substack.com
         </a>
       </p>
     </div>
