--- a/src/index.html
+++ b/src/index.html
@@ -132,245 +132,20 @@
     </div>
   </section>
 
-  <section class="bg-white dark:bg-gray-900">
-    <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
-      <h2 class="text-4xl font-extrabold dark:text-white">Timeline</h2>
-      <p class="my-4 text-lg font-normal text-gray-500 dark:text-gray-400">
-        Large Language Models have not been actively used by adtech companies
-        besides some initial experiments. However, everyone sees the potential
-        and we believe they are soon arise.
-      </p>
+  <noscript>
+    <section class="bg-white dark:bg-gray-900">
+      <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
+        <h2
+          class="mb-4 text-2xl font-extrabold tracking-tight leading-none text-gray-900 md:text-5xl lg:text-4xl dark:text-white">
+          Javascript must be enabled to see the page content
+        </h2>
+      </div>
+    </section>
+  </noscript>
 
-      <ol class="relative border-s border-gray-200 dark:border-gray-700">
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            1966
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            ELIZA
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            Created by Joseph Weizenbaum at MIT, ELIZA is considered to be the
-            first chatbot ever built by humans.
-          </p>
-          <a href="https://web.njit.edu/~ronkowit/eliza.html" target="_blank"
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
-            Try it
-            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-              viewBox="0 0 14 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9" />
-            </svg>
-          </a>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            2001
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            SmarterChild: pioneering AI chatbot
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            Early chatbot SmarterChild gains popularity among preteens for its
-            witty responses on AIM and MSN. It is a precursor to modern AI bots
-            like Siri and Alexa, even inspiring investors to fund Siri.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            December 2015
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            Creation of OpenAI
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            OpenAI is introduced as a non-profit organization focused on
-            advancing digital intelligence in a way that benefits humanity as a
-            whole.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            June 2017
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            The invention of Transformers Architecture
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            Transformers came out in 2017 with the paper “Attention is all you
-            need” from Vaswani and colleagues of a Google Team.
-          </p>
-          <a href="https://arxiv.org/abs/1706.03762" target="_blank"
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
-            Read the paper
-            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-              viewBox="0 0 14 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9" />
-            </svg>
-          </a>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            June 2018
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            GPT-1 launch
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            OpenAI unveils GPT-1, its initial version of GPT.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            October 2018
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            Google's BERT
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            Pre-trained on vast amounts of text, BERT was the first proper
-            foundational language model that could be fine-tuned for specific
-            tasks, setting new performance standards across various benchmarks.
-          </p>
-          <a href="https://arxiv.org/abs/1810.04805" target="_blank"
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">
-            Read the paper
-            <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-              viewBox="0 0 14 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M1 5h12m0 0L9 1m4 4L9 9" />
-            </svg>
-          </a>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            February 2019
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            Launch of GPT-2
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            The second version of GPT (Generative Pre-trained Transformer),
-            known as GPT-2, makes its debut.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            July 2019
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            Partnership between Microsoft and OpenAI
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            The partnership between Microsoft and OpenAI is disclosed, marking
-            the commencement of their collaborative efforts in advancing AI
-            technology.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            June 2020
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            GPT-3 launch
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            OpenAI introduces GPT-3, which has over a thousand times the number
-            of parameters compared to its initial predecessor.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            November 2022
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            OpenAI launches GPT-3.5 featuring ChatGPT
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            OpenAI introduces GPT-3, which has over a thousand times the number
-            of parameters compared to its initial predecessor.
-          </p>
-        </li>
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            February 2023
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            ChatGPT achieves unprecedented growth
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            It is reported that ChatGPT reached an estimated 100 million monthly
-            active users in January, just two months after its launch, making it
-            the fastest-growing consumer application in history.
-          </p>
-        </li>
+  <div id="timeline">
 
-        <li class="mb-10 ms-4">
-          <div
-            class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700">
-          </div>
-          <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">
-            TBD
-          </time>
-          <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-            TBD
-          </h3>
-          <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-            TBD: Other models, using LLMs in search engines, announcing ads,
-            research papers about LLM ads.
-          </p>
-        </li>
-      </ol>
-
-      <p class="my-4 text-sm font-normal italic text-gray-500 dark:text-gray-400">
-        Sources for the timeline:
-        <a class="text-blue-400" href="https://timelines.issarice.com/wiki/Timeline_of_ChatGPT">
-          timelines.issarice.com
-        </a>,
-        <a class="text-blue-400"
-          href="https://medium.com/@researchgraph/brief-introduction-to-the-history-of-large-language-models-llms-3c2efa517112">
-          Research Graph
-        </a>,
-        <a class="text-blue-400" href="https://synthedia.substack.com/p/a-timeline-of-large-language-model">
-          synthedia.substack.com
-        </a>
-      </p>
-    </div>
-  </section>
+  </div>
 
   <footer class="p-4 bg-white md:p-8 lg:p-10 dark:bg-gray-800">
     <div class="mx-auto max-w-screen-xl text-center">
@@ -391,6 +166,7 @@
   </footer>
 
   <script type="module" src="assets/main.js"></script>
+  <script type="module" src="assets/index.js"></script>
 </body>
 
 </html>
