--- a/src/demoadblocking.html
+++ b/src/demoadblocking.html
@@ -7,6 +7,7 @@
     <title>LLM Ads Demo</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="assets/style.css" />
+    <script type="module" src="assets/main.js"></script>
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
                 <a href="/" class="flex items-center">
-                    <img src="assets/logo.svg" class="mr-3 h-6 sm:h-9" alt="LLM Ads Demo" />
+                    <img src="assets/img/logo.svg" class="mr-3 h-6 sm:h-9" alt="LLM Ads Demo" />
                     <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">LLM Ads
                         Demo</span>
                 </a>
@@ -73,7 +74,4 @@
             </div>
         </nav>
     </header>
-
-
-    <script type="module" src="assets/main.js"></script>
 </body>
