--- a/src/demoads.html
+++ b/src/demoads.html
@@ -7,6 +7,8 @@
     <title>LLM Ads Demo</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="assets/style.css" />
+    <script type="module" src="assets/main.js"></script>
+    <script type="module" src="assets/demoads.js"></script>
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
                 <a href="/" class="flex items-center">
-                    <img src="assets/logo.svg" class="mr-3 h-6 sm:h-9" alt="LLM Ads Demo" />
+                    <img src="assets/img/logo.svg" class="mr-3 h-6 sm:h-9" alt="LLM Ads Demo" />
                     <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">LLM Ads
                         Demo</span>
                 </a>
@@ -57,7 +59,7 @@
                             <a href="demoads.html"
                                 class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white"
                                 aria-current="page">
-                                Demo 1
+                                Demo: Ads Framework
                             </a>
                         </li>
                         <li>
@@ -104,7 +106,4 @@
                     class="hover:underline">AdGuard</a>. All Rights Reserved.</span>
         </div>
     </footer>
-
-    <script type="module" src="assets/main.js"></script>
-    <script type="module" src="assets/demoads.js"></script>
 </body>
