--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
               clip-rule="evenodd"></path>
           </svg>
         </a>
-        <a href="#"
+        <a href="javascript:alert('Not yet published, but coming soon')"
           class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-gray-900 rounded-lg border border-gray-300 hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800">
           <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -159,8 +159,9 @@
           <a href="https://adfilteringdevsummit.com/" class="mr-4 hover:underline md:mr-6 ">Ad Filtering Dev Summit</a>
         </li>
       </ul>
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="#"
-          class="hover:underline">AdGuard</a>. All Rights Reserved.</span>
+      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">
+        © 2024 Andrey Meshkov and Natalia Sokolova from AdGuard
+      </span>
     </div>
   </footer>
 
